# openaix-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  REORGANIZATION_SUMMARY.md  alexa_sites.txt  appstore_sites.txt  auto_evaluate.py  benchmark.py  cron_evaluate.py  crunchbase_sites.txt  extra_clean.txt  extra_websites.txt  final_sites.txt  generate_website_list.py  github_sites.txt  industry_websites_raw.txt  local_sites.txt  majestic_top5000.txt  more_sites.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test_output.md  test_report.md  test_single.md  test_tamu.md  website_expansion_report.txt  websites.txt  websites_backup.txt  websites_backup_20260225.txt  websites_backup_20260225_1116.txt  websites_expanded.txt  websites_top1000.txt
.github/: RELEASE_NOTES.md  RELEASE_NOTES_v1.3.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-update.yml  ci.yml
data/evaluations/: report_20260213_174419.md
data/evaluations/20260213/: 175110_platform.openai.com.md  175112_nodejs.org.md  175128_docs.python.org.md  175133_nextjs.org.md  175143_github.com.md  181551_redis.io.md  181605_docs.astro.build.md  181605_redis_io.md  181610_docs_astro_build.md  181632_cloudflare_com.md  181632_summary.md  181635_tailwindcss.com.md  181648_gemini.google.com.md  181648_tailwindcss_com.md  181653_gemini_google_com.md  181653_shopify.com.md  181701_google.com.md  181701_shopify_com.md  181707_google_com.md  190803_fcc.gov.md  (+454 more)
docs/: API.md  ARCHITECTURE.md  AUTO_UPDATE_GUIDE.md  DATA_ARCHITECTURE_V2.md  STANDARDIZATION_REPORT.md  industry_insight_report.md
manifesto/: index.md  philosophy.md
scripts/: fix_ssl_issues.py  recalculate_grades.py  recalculate_quick.py  scorer_ssl_patch.diff  update_dashboard.py  update_data.sh
scripts/data_pipeline/: analyze_data.py  clean_data.py  standardize_data.py
spec/: implementation.md  metrics.md  v1.0.md  v1.1.md
src/openaix/: __init__.py  cli.py  dynamic_ranking.py  scorer.py  site_type.py  storage.py  weights.py
tests/: test_scorer.py
web/dashboard/: index.html
website/: index.html
(+12009 files in other folders)
