[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openaix-scorer"
version = "2.1.0"
description = "AI Experience (AIX) Evaluation System - 5 dimensions with API availability and dynamic weights"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenAIX Team", email = "team@openaix.org"}
]
keywords = ["ai", "web", "scoring", "accessibility", "llm", "crawler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "tiktoken>=0.5.0",
    "markdownify>=0.11.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/OpenAIX/openaix-scorer"
Documentation = "https://github.com/OpenAIX/openaix-scorer/blob/main/docs/API.md"
Repository = "https://github.com/OpenAIX/openaix-scorer"
Issues = "https://github.com/OpenAIX/openaix-scorer/issues"

[project.scripts]
openaix = "openaix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
